# job-hunter

./: .gitignore  README.md  main.py  pyproject.toml  scrape.py
static/: index.html
