[project]
name = "job-hunter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.50.0",
    "python-dotenv>=1.0.0",
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.131.0",
    "httpx>=0.27.0",
    "pypdf>=4.0.0",
    "python-multipart>=0.0.9",
    "requests>=2.32.5",
    "selenium>=4.41.0",
    "undetected-chromedriver>=3.5.5",
    "uvicorn>=0.41.0",
    "webdriver-manager>=4.0.2",
]
